--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -210,6 +210,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <Button
+                android:id="@+id/abmelden"
+                android:text="Vom Konto abmelden"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
