--- a/app/src/main/res/layout/anruf_button.xml
+++ b/app/src/main/res/layout/anruf_button.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
-            android:id="@+id/ausloggen_btn"
+            android:id="@+id/anruf_btn"
             android:orientation="horizontal"
             android:padding="3dp"
             android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginBottom="15dp"
                 android:paddingTop="13dp"
-                android:text="Vom Konto ausloggen"
+                android:text="Call us"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
