--- a/app/src/main/res/layout/impressum.xml
+++ b/app/src/main/res/layout/impressum.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:id="@+id/kontakt_btn"
             android:orientation="horizontal"
             android:padding="3dp"
             android:layout_width="match_parent"
@@ -25,6 +26,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,7 +36,7 @@
                 android:text="Kontakt"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
 
         </LinearLayout>
